--- a/mediaplayer/mediaplayer/MainPage.xaml
+++ b/mediaplayer/mediaplayer/MainPage.xaml
@@ -33,27 +33,39 @@
                    CompactPaneLength="45"
                    OpenPaneLength="200">
             <SplitView.Pane>
-                <ListView Name="MenuItemsListView" IsItemClickEnabled="True"
+                <StackPanel Background="Gray">
+                    <ListView Name="MenuItemsListView" IsItemClickEnabled="True"
                           ItemsSource="{x:Bind menuItems}"
                           ItemClick="MenuItemsListView_ItemClick" >
-                    <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="data:MenuItem" >
-                            <StackPanel Orientation="Horizontal">
-                                <Image Source="{x:Bind IconFile}" 
+                        <ListView.ItemTemplate>
+                            <DataTemplate x:DataType="data:MenuItem" >
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Source="{x:Bind IconFile}" 
                                        Height="35" 
                                        Width="35"
                                        Margin="-10,10,0,10"
                                        />
-                                <TextBlock 
+                                    <TextBlock 
                                     Text="{x:Bind Category}" 
                                     FontSize="18" 
                                     Margin="10,0,0,0" 
                                     VerticalAlignment="Center" />
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-
-                </ListView>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                    <StackPanel Orientation="Horizontal">
+                        <Button Content="&#xE735;"
+                        Name="PlayList"
+                        FontFamily="Segoe MDL2 Assets"
+                        Click="PlayList_Click"/>
+                        <TextBlock 
+                        Text="Play List" 
+                        FontSize="18" 
+                        Margin="10,0,0,0" 
+                        VerticalAlignment="Center" />
+                    </StackPanel>
+                </StackPanel>
             </SplitView.Pane>
             <SplitView.Content>
                 <Grid Margin="20,20,0,0">
@@ -74,17 +86,15 @@
                               ItemClick="SoundGridView_ItemClick">
                         <GridView.ItemTemplate>
                             <DataTemplate x:DataType="data:Sound">
-                                <Image Name="MyImage" Height="112" Width="101" Source="{x:Bind ImageFile}" />
+                                <StackPanel>
+                                    <Image Name="MyImage" Height="112" Width="101" Source="{x:Bind ImageFile}" />
+                                    <CheckBox x:Name="PlayListCheck" Visibility="Visible" IsChecked="{x:Bind playList,Mode=TwoWay}"/>
+                                </StackPanel>
                             </DataTemplate>
                         </GridView.ItemTemplate>
                     </GridView>
-
-
-
                 </Grid>
             </SplitView.Content>
-
         </SplitView>
-
     </Grid>
 </Page>
