--- a/mediaplayer/mediaplayer/MainPage.xaml
+++ b/mediaplayer/mediaplayer/MainPage.xaml
@@ -1,70 +1,64 @@
 ﻿<Page
-    x:Class="mediaplayer.MainPage"
+    x:Class="MusicLibrary.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:mediaplayer"
+    xmlns:local="using:MusicLibrary"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:data="using:mediaplayer.Model"
+    xmlns:data="using:MusicLibrary.Model"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+    
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height ="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
+             
         <RelativePanel>
-            <Button Content="&#xE700;"
-                    Name="HamburgerButton"
+            <Button Content ="&#xE700;"
+                    Name ="HamburgerButton"
+                    Background="Aqua"
                     FontFamily="Segoe MDL2 Assets"
                     Click="HamburgerButton_Click"
-                    RelativePanel.AlignLeftWithPanel="True"
-                    />
-            <Button Content="&#xE0A6;"
-                    Name="BackButton"
+                    RelativePanel.AlignLeftWithPanel="True"/>
+            <Button Content ="&#xE0A6;"
+                    Name ="BackButton"
                     FontFamily="Segoe MDL2 Assets"
                     Click="BackButton_Click"
-                    RelativePanel.RightOf="HamburgerButton"
-                    />
+                    RelativePanel.RightOf="HamburgerButton"/>
         </RelativePanel>
-        <SplitView Grid.Row="1" Name="MySplitView"
-                   DisplayMode="CompactOverlay"
-                   CompactPaneLength="45"
+
+        <SplitView Grid.Row="1"
+                   Name="MySplitView" 
+                   DisplayMode="CompactOverlay" 
+                   CompactPaneLength="45" 
                    OpenPaneLength="200">
             <SplitView.Pane>
                 <StackPanel Background="PowderBlue">
                     <ListView Name="MenuItemsListView" IsItemClickEnabled="True"
-                          ItemsSource="{x:Bind menuItems}"
-                          ItemClick="MenuItemsListView_ItemClick" >
+                              ItemsSource="{x:Bind menuItems}"
+                              ItemClick="MenuItemsListView_ItemClick" >
                         <ListView.ItemTemplate>
                             <DataTemplate x:DataType="data:MenuItem" >
                                 <StackPanel Orientation="Horizontal">
-                                    <Image Source="{x:Bind IconFile}" 
-                                       Height="35" 
-                                       Width="35"
-                                       Margin="-10,10,0,10"
-                                       />
-                                    <TextBlock 
-                                    Text="{x:Bind Category}" 
-                                    FontSize="18" 
-                                    Margin="10,0,0,0" 
-                                    VerticalAlignment="Center" />
+                                    <Image Source="{x:Bind IconFile}"  Height="35" Width="35" Margin="-10,10,0,10" />
+                                    <TextBlock Text="{x:Bind Category}" FontSize="18" Margin="10,0,0,0" VerticalAlignment="Center" />
                                 </StackPanel>
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
-                    <StackPanel Orientation="Horizontal">
+                  <StackPanel Orientation="Horizontal">
                         <Button Content="&#xE735;"
-                        Name="PlayList"
-                        FontFamily="Segoe MDL2 Assets"
-                        Click="PlayList_Click"/>
-                        <TextBlock 
-                        Text="Play List" 
-                        FontSize="18" 
-                        Margin="10,0,0,0" 
-                        VerticalAlignment="Center" />
-                    </StackPanel>
+                                Name="PlayList"
+                                FontFamily="Segoe MDL2 Assets"
+                                Click="PlayList_Click"/>
+                        <TextBlock Text="Play List" FontSize="18" Margin="10,0,0,0" VerticalAlignment="Center" />
+                  </StackPanel>
+                  <StackPanel Orientation="Horizontal">
+                        <Button Content="&#xE728;" Name="FavoriteList" FontFamily="Segoe MDL2 Assets" Click="FavoriteList_Click"/>
+                        <TextBlock Text="Play List" FontSize="18" Margin="10,0,0,0" VerticalAlignment="Center" />
+                  </StackPanel>
                 </StackPanel>
             </SplitView.Pane>
             <SplitView.Content>
@@ -73,24 +67,27 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-
-                    <MediaElement Name="MyMediaElement" AutoPlay="True" />
-
-                    <TextBlock Name="CategoryTextBlock" Text="All Sounds" FontSize="24" />
-
-                    <GridView Grid.Row="1" 
-                              Name="SoundGridView"
-                              SelectionMode="None"
+                    <MediaElement Name="MyMediaElement" AutoPlay="False" />
+                    <TextBlock Name="CategoryTextBlock" Text="My Music" FontSize="24" />
+                    <GridView Grid.Row="1"
+                              Name="SongGridView" 
+                              SelectionMode="None" 
                               IsItemClickEnabled="True"
-                              ItemsSource="{x:Bind sounds}"
-                              ItemClick="SoundGridView_ItemClick">
+                              ItemsSource="{x:Bind songs}"
+                              ItemClick="SongGridView_ItemClick">
                         <GridView.ItemTemplate>
-                            <DataTemplate x:DataType="data:Sound">
-                                <StackPanel Margin="50">
+                            <DataTemplate x:DataType="data:Song">
+                                <StackPanel Margin="60">
                                     <Image Name="MyImage" Height="112" Width="101" Source="{x:Bind ImageFile}" />
                                     <TextBlock x:Name="AudioFileName" FontSize="20" HorizontalAlignment="Center" Text="{x:Bind Name}" />
-                                    <RatingControl x:Name="MyRating" ValueChanged="RatingChanged"/>  
-                                    <CheckBox x:Name="PlayListCheck" Visibility="Visible" IsChecked="{x:Bind playList,Mode=TwoWay}"/>
+                                    <RatingControl x:Name="MyRating" ValueChanged="RatingChanged"/>
+                                    <StackPanel Orientation="Horizontal" Margin="5">
+                                        <AppBarButton Name="Play" Icon="Play" Click="PlayButton_Click"/>
+                                        <AppBarButton Name="Pause" Icon="Pause" Visibility="Collapsed" Click="PauseButton_Click"/>
+                                        <AppBarButton Name="Stop" Icon="Stop" Visibility="Collapsed" Click="StopButton_Click"/>
+                                    </StackPanel>
+                                    <AppBarButton Name="AddPlaylist" Icon="Add" Click="AddPlaylist_Click"/>
+                                    <CheckBox x:Name="PlayListCheck" Visibility="Visible" IsChecked="{x:Bind PlayList,Mode=TwoWay}"/>
                                 </StackPanel>
                             </DataTemplate>
                         </GridView.ItemTemplate>
@@ -98,5 +95,6 @@
                 </Grid>
             </SplitView.Content>
         </SplitView>
+    
     </Grid>
 </Page>
