--- a/MediaPlayer/MusicPlayer/App.xaml
+++ b/MediaPlayer/MusicPlayer/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application
-    x:Class="mediaplayer.App"
+    x:Class="MusicLibrary.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:mediaplayer">
+    xmlns:local="using:MusicLibrary">
 
 </Application>
