--- a/MediaPlayer/MusicPlayer/MainPage.xaml
+++ b/MediaPlayer/MusicPlayer/MainPage.xaml
@@ -111,7 +111,7 @@
                                               IsChecked="{x:Bind SelectedForPlaylist,Mode=TwoWay}"/>
                                     <Image Name="MyImage" Height="112" Width="101" Source="{x:Bind ImageFile}" />
                                     <TextBlock x:Name="AudioFileName" FontSize="20" HorizontalAlignment="Center" Text="{x:Bind Name}" />
-                                    <RatingControl x:Name="MyRating" ValueChanged="RatingChanged"/>
+                                    <RatingControl x:Name="MyRating" InitialSetValue="0" Value="{x:Bind rating,Mode=TwoWay}"/>
                                     <StackPanel Orientation="Horizontal" Margin="5">
                                         <AppBarButton Name="Play" Icon="Play" Click="PlayButton_Click"/>
                                         <AppBarButton Name="Pause" Icon="Pause" Visibility="Collapsed" Click="PauseButton_Click"/>
