Update App.xaml for app to be dark theme
Update App.xaml for app to be dark theme

--- a/MediaPlayer/MusicPlayer/App.xaml
+++ b/MediaPlayer/MusicPlayer/App.xaml
@@ -2,5 +2,6 @@
     x:Class="MusicLibrary.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MusicLibrary">
+    xmlns:local="using:MusicLibrary"
+    RequestedTheme="Dark">
 </Application>
